:lipstick: fix header alignment

--- a/frontend/src/components/header.css
+++ b/frontend/src/components/header.css
@@ -1,11 +1,7 @@
 .Header {
     background-color: #1b1b1b;
-    min-height: .6in;
     font-size: calc(15px + 2vmin);
     color: white;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-bottom: 25px;
 }
 
 .Header-logout-btn {
